EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Facility__c/fields/hed__Account__c.field-meta.xml
<CustomField>
    <fullName>hed__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The organization responsible for this Facility, for example, a University Department.</description>
    <inlineHelpText>La organización responsable de estas instalaciones; por ejemplo, un Departamento de universidad.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facilities</relationshipLabel>
    <relationshipName>Facilities</relationshipName>
    <type>Lookup</type>
</CustomField>