EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Facility__c/fields/hed__Capacity__c.field-meta.xml
<CustomField>
    <fullName>hed__Capacity__c</fullName>
    <description>The maximum number of occupants the Facility can hold.</description>
    <inlineHelpText>El número máximo de ocupantes que puede albergar la instalación.</inlineHelpText>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>