EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Facility__c/fields/hed__Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>hed__Facility_Type__c</fullName>
    <description>Select the type of Facility this is, for example, a computer lab, health center, lecture hall, etc.</description>
    <inlineHelpText>Seleccione el tipo de instalaciones, como por ejemplo, un laboratorio de computadoras, centro de salud, sala de conferencias, etc.</inlineHelpText>
    <label>Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Cafeteria/Food Hall</fullName>
            </value>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>Computer Lab</fullName>
            </value>
            <value>
                <fullName>Gymnasium</fullName>
            </value>
            <value>
                <fullName>Health Center</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Lecture Hall</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>